--- a/monitoring/templates/monitoring/checkdetails.html
+++ b/monitoring/templates/monitoring/checkdetails.html
@@ -28,9 +28,9 @@ tbody tr:hover {
   </thead>
   <tbody>
   {% for variable in check.sensor.sensorvariable_set.all %}
-    <tr onclick="window.location='{% url monitoring.views.render_check check.uuid variable.name %}';">
+    <tr onclick="window.location='{% url monitoring.views.render_check_page check.uuid variable.name %}';">
       <td>{{ variable.name }}</td>
-      <td><a href="{% url monitoring.views.render_check check.uuid variable.name %}" title="View graph" style="text-decoration: none">→</a></td>
+      <td><a href="{% url monitoring.views.render_check_page check.uuid variable.name %}" title="View graph" style="text-decoration: none">→</a></td>
     </tr>
   {% endfor %}
   </tbody>
