--- a/monitoring/templates/monitoring/graph.html
+++ b/monitoring/templates/monitoring/graph.html
@@ -10,7 +10,9 @@
 </ul>
 <h3>{{ ds }}</h3>
 <div style="width: 100%">
-  <img src="{% url monitoring.views.render_check check.uuid ds %}" alt="graph" style="margin: 0 auto" />
+  <img class="widescreenonly"   src="{% url monitoring.views.render_check check.uuid ds %}" alt="graph" style="margin: 0 auto" />
+  <img class="narrowscreenonly" src="{% url monitoring.views.render_check check.uuid ds %}?width=410" alt="graph" style="margin: 0 auto" />
+  <img class="tinyscreenonly"   src="{% url monitoring.views.render_check check.uuid ds %}?width=220" alt="graph" style="margin: 0 auto" />
 </div>
 <p><a href="{% url monitoring.views.check_details check.uuid %}" title="back" style="text-decoration: none">←</a></p>
 {% endblock %}
