--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <link rel='stylesheet'    href='http://fonts.googleapis.com/css?family=PT+Sans' type='text/css'>
     <style type="text/css">
       #content {
-        width: 700px;
+        width: 800px;
         orphans: 2;
         margin: 30px auto 40px auto;
         font-family: 'PT Sans', sans-serif;
@@ -30,10 +30,25 @@
       div.fieldWrapper input {
          width: 100%;
       }
-      @media screen and (max-width:725px) {
+      .narrowscreenonly {
+        display: none;
+      }
+      .tinyscreenonly {
+        display: none;
+      }
+      @media screen and (max-width:825px) {
         #content {
           width: 500px;
           font-size: 12pt;
+        }
+        .widescreenonly {
+          display: none;
+        }
+        .narrowscreenonly {
+          display: inline;
+        }
+        .tinyscreenonly {
+          display: none;
         }
       }
       @media screen and (max-width:525px) {
@@ -41,8 +56,11 @@
           width: 310px;
           font-size: 10pt;
         }
-        .screenonly {
+        .narrowscreenonly {
           display: none;
+        }
+        .tinyscreenonly {
+          display: inline;
         }
       }
     </style>
@@ -51,7 +69,7 @@
     <div id="content">
       {% block content %}
       {% endblock %}
-      <div style="position: fixed; bottom: 20px; font-size: 10pt;">
+      <div style="font-size: 10pt">
         {% if user.is_authenticated %}
           <a href="{% url monitoring.views.profile %}">{{ user }}</a> &mdash;
           <a href="{% url monitoring.views.search %}">Search</a> &mdash;
