--- a/monitoring/templates/profile.html
+++ b/monitoring/templates/profile.html
@@ -18,7 +18,13 @@
           {{ searchform.query.errors }}
           {{ searchform.query }}
       </div>
-      <input type="submit" value="Submit" />
+      <center><input type="submit" value="Submit" /></center>
     </form>
   </div>
+
+  <script type="text/javascript">
+    setTimeout(function(){
+      document.getElementById('id_query').focus();
+    }, 500);
+  </script>
 {% endblock %}
