--- a/monitoring/templates/monitoring/graph.html
+++ b/monitoring/templates/monitoring/graph.html
@@ -10,7 +10,7 @@
     <li><b>Parameters:</b>
       <ul>
         {% for checkparam in check.checkparameter_set.all %}
-          <li><i>{% if checkparam.parameter.display %}{{ checkparam.parameter.display }}{% else %}{{ checkparam.parameter.name }}{% endif %}</i>: {{ checkparam.value }}</li>
+          <li><i>{% if checkparam.parameter.display %}{{ checkparam.parameter.display }}{% else %}{{ checkparam.parameter.name }}{% endif %}:</i> {{ checkparam.value }}</li>
         {% endfor %}
       </ul>
     </li>
