rename include templates to *.inc.html

--- a/monitoring/templates/profile.html
+++ b/monitoring/templates/profile.html
@@ -8,5 +8,5 @@
     Thing is, for that to happen, we need to have alerts first.
   </p>
 
-  {% include "monitoring/searchform.html" %}
+  {% include "monitoring/searchform.inc.html" %}
 {% endblock %}
