--- a/monitoring/templates/monitoring/search.html
+++ b/monitoring/templates/monitoring/search.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% comment %} kate: space-indent on; indent-width 2; replace-tabs on; {% endcomment %}
 {% block content %}
-  {% include "monitoring/searchform.html" %}
+  {% include "monitoring/searchform.inc.html" %}
   {% if have_query %}
-  {% include "monitoring/listchecks.html" %}
+  {% include "monitoring/listchecks.inc.html" %}
   {% endif %}
 {% endblock %}
