--- a/monitoring/templates/profile.html
+++ b/monitoring/templates/profile.html
@@ -8,5 +8,11 @@
     Thing is, for that to happen, we need to have alerts first.
   </p>
 
+  <div class="alert alert-success">This is what a success message looks like.</div>
+  <div class="alert alert-info">Alerts could look like this...</div>
+  <div class="alert alert-warning">...or this...</div>
+  <div class="alert alert-danger">...or this.</div>
+
+
   {% include "monitoring/searchform.inc.html" %}
 {% endblock %}
