--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,14 +8,33 @@
   {% endif %}
 
   <div>
-    <form method="post" action=".">{% csrf_token %}
-      <table>
-        <tr><td>{{ form.username.label_tag }}</td><td>{{ form.username }}</td></tr>
-        <tr><td>{{ form.password.label_tag }}</td><td>{{ form.password }}</td></tr>
-      </table>
-
-      <input type="submit" value="login" />
-      <input type="hidden" name="next" value="{{ next }}" />
+    <form role="form" class="form-horizontal" method="post" action=".">
+      {% csrf_token %}
+      <div class="form-group">
+        <label for="id_{{ form.username.html_name }}" class="col-lg-2 control-label">{{ form.username.label }}</label>
+        <div class="col-lg-10">
+          <input type="text" class="form-control"
+            name="{{ form.username.html_name }}"
+            id="id_{{ form.username.html_name }}"
+            {% if form.username.value %} value="{{ form.username.value }}" {% endif %}
+            placeholder="{{ form.username.label }}" />
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="id_{{ form.password.html_name }}" class="col-lg-2 control-label">{{ form.password.label }}</label>
+        <div class="col-lg-10">
+          <input type="password" class="form-control"
+            name="{{ form.password.html_name }}"
+            id="id_{{ form.password.html_name }}"
+            placeholder="{{ form.password.label }}" />
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-lg-offset-2 col-lg-10">
+          <button type="submit" class="btn btn-default">Login</button>
+        </div>
+      </div>
     </form>
   </div>
+
 {% endblock %}
