add id to th query field

--- a/monitoring/templates/monitoring/searchform.inc.html
+++ b/monitoring/templates/monitoring/searchform.inc.html
@@ -9,6 +9,7 @@
         {{ searchform.query.errors }}
         <input type="text" class="form-control"
           name="{{ searchform.query.html_name }}"
+          id="id_{{ searchform.query.html_name }}"
           {% if searchform.query.value %} value="{{ searchform.query.value }}" {% endif %}
           placeholder="{{ searchform.query.label }}" />
         <span class="input-group-btn">
