--- a/monitoring/templates/monitoring/listchecks.inc.html
+++ b/monitoring/templates/monitoring/listchecks.inc.html
@@ -1,23 +1,12 @@
 {% comment %} kate: space-indent on; indent-width 2; replace-tabs on; {% endcomment %}
 {% if list_checks %}
-<style>
-table {
-  width: 100%;
-}
-tr {
-  width: 100%;
-}
-tbody tr:hover {
-  background-color: #DDEEFF;
-}
-</style>
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Host</th>
       <th>Sensor</th>
       <th>Parameters</th>
-      <td> </td>
+      <th> </th>
     </tr>
   </thead>
   <tbody>
