--- a/monitoring/templates/monitoring/graph.html
+++ b/monitoring/templates/monitoring/graph.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
+{% load display %}
 {% comment %} kate: space-indent on; indent-width 2; replace-tabs on; {% endcomment %}
 {% block content %}
 <ol class="breadcrumb">
   <li><a href="/">Home</a></li>
-  <li><a href="{% url monitoring.views.check_details check.uuid %}">{% if check.display %}{{ check.display }}{% else %}{{ check.uuid }}{% endif %}</a></li>
-  <li class="active">{% if variable.display %}{{ variable.display }}{% else %}{{ variable.name }}{% endif %}</li>
+  <li><a href="{% url monitoring.views.check_details check.uuid %}">{{ check|display:"uuid" }}</a></li>
+  <li class="active">{{ variable|display }}</li>
 </ol>
 <dl class="dl-horizontal">
   <dt>Check:</dt>
-  <dd>{% if check.display %}{{ check.display }}{% else %}{{ check.uuid }}{% endif %}</dd>
+  <dd>{{ check|display:"uuid" }}</dd>
   <dt>Sensor:</dt>
   <dd>{{ check.sensor }}</dd>
   <dt>Executed on host:</dt>
@@ -22,13 +23,13 @@
     <dd>
       <ul class="list-unstyled">
         {% for checkparam in check.checkparameter_set.all %}
-          <li><i>{% if checkparam.parameter.display %}{{ checkparam.parameter.display }}{% else %}{{ checkparam.parameter.name }}{% endif %}:</i> {{ checkparam.value }}</li>
+          <li><i>{{ checkparam.parameter|display }}</li>
         {% endfor %}
       </ul>
     </dd>
   {% endif %}
 </dl>
-<h3>{% if variable.display %}{{ variable.display }}{% else %}{{ variable.name }}{% endif %}</h3>
+<h3>{{ variable|display }}</h3>
 <div style="width: 100%">
   <img class="widescreenonly"   src="{% url monitoring.views.render_check check.uuid variable.name %}" alt="graph" style="margin: 0 auto" />
   <img class="narrowscreenonly" src="{% url monitoring.views.render_check check.uuid variable.name %}?width=410" alt="graph" style="margin: 0 auto" />
