--- a/monitoring/templates/monitoring/checkdetails.html
+++ b/monitoring/templates/monitoring/checkdetails.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load display %}
+{% load display_extras %}
 {% comment %} kate: space-indent on; indent-width 2; replace-tabs on; {% endcomment %}
 {% block content %}
 <ol class="breadcrumb">
@@ -8,46 +8,7 @@
 </ol>
 <dl class="dl-horizontal">
   <dt>Check:</dt>
-  <dd>
-    <div class="fluxeditable">
-      <div class="fluxlabel">
-        <span>{{ check|display:"uuid" }}</span>
-        <button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-pencil" title="Edit..."></span></button>
-      </div>
-      <div class="fluxeditor fluxhidden">
-        <form class="form-inline" role="form">
-          <input type="hidden" name="objid" value="{{ check.id }}" />
-          <input type="hidden" name="uuid" value="{{ check.uuid }}" />
-          <div class="form-group"><input name="display" value="{{ check.display }}" class="form-control" size="50" placeholder="{{ check.uuid }}"/></div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
-      </div>
-    </div>
-    <script>
-      $("div.fluxeditable").children("div.fluxlabel").children("button").click(function(){
-        var fluxeditable = $(this.parentNode.parentNode);
-        fluxeditable.children("div.fluxlabel").addClass("fluxhidden");
-        fluxeditable.children("div.fluxeditor").removeClass("fluxhidden");
-        fluxeditable.children("div.fluxeditor").children("form").submit(function(){
-          var fallback = this.uuid.value;
-          $.ajax({
-            type: "POST",
-            url:  "/display/monitoring/check",
-            data: {
-              id:      this.objid.value,
-              display: this.display.value,
-            },
-            dataType: "json",
-            success: function(data){
-              fluxeditable.children("div.fluxlabel").children("span").html(data.display || fallback);
-              fluxeditable.children("div.fluxlabel").removeClass("fluxhidden");
-              fluxeditable.children("div.fluxeditor").addClass("fluxhidden");
-            }});
-          return false;
-        });
-      });
-    </script>
-  </dd>
+  <dd>{{ check|displayform:"uuid" }}</dd>
   <dt>Sensor:</dt>
   <dd>{{ check.sensor }}</dd>
   <dt>Executed on host:</dt>
@@ -83,4 +44,5 @@
   {% endfor %}
   </tbody>
 </table>
+<script type="text/javascript" src="/static/display/display.js"></script>
 {% endblock %}
