--- a/monitoring/templates/monitoring/listchecks.inc.html
+++ b/monitoring/templates/monitoring/listchecks.inc.html
@@ -1,9 +1,11 @@
 {% comment %} kate: space-indent on; indent-width 2; replace-tabs on; {% endcomment %}
+{% load display_extras %}
 {% if list_checks %}
 <table class="table table-hover">
   <thead>
     <tr>
       <th>Host</th>
+      <th>Check Label</th>
       <th>Sensor</th>
       <th>Parameters</th>
       <th> </th>
@@ -16,6 +18,7 @@
         {{ check.target_host }}
         {% if check.target_host != check.exec_host %}(as seen by {{ check.exec_host }}){% endif %}
       </td>
+      <td>{{ check.display }}</td>
       <td>{{ check.sensor }}</td>
       <td>{{ check.paramstring }}</td>
       <td><a href="{% url monitoring.views.check_details check.uuid %}" title="View details" style="text-decoration: none">→</a></td>
