--- a/monitoring/templates/monitoring/checkdetails.html
+++ b/monitoring/templates/monitoring/checkdetails.html
@@ -4,7 +4,11 @@
 {% block content %}
 <ol class="breadcrumb">
   <li><a href="/">Home</a></li>
-  <li><a href="{% url monitoring.views.check_details check.uuid %}">{{ check|display:"uuid" }}</a></li>
+  <li>
+    <a href="{% url hosts.views.host check.target_host.fqdn %}">{{ check.target_host|display:"fqdn" }}</a>
+    {% if check.target_host != check.exec_host %}(as seen by <a href="{% url hosts.views.host check.exec_host.fqdn %}">{{ check.exec_host|display:"fqdn" }}</a>){% endif %}
+  </li>
+  <li class="active">{{ check|display:"uuid" }}</li>
 </ol>
 <dl class="dl-horizontal">
   <dt>Check:</dt>
@@ -12,9 +16,9 @@
   <dt>Sensor:</dt>
   <dd>{{ check.sensor }}</dd>
   <dt>Executed on host:</dt>
-  <dd>{{ check.exec_host }}</dd>
+  <dd><a href="{% url hosts.views.host check.exec_host.fqdn %}">{{ check.exec_host|display:"fqdn" }}</a></dd>
   <dt>Target host:</dt>
-  <dd>{{ check.target_host }}</dd>
+  <dd><a href="{% url hosts.views.host check.target_host.fqdn %}">{{ check.target_host|display:"fqdn" }}</a></dd>
   <dt>Last update:</dt>
   <dd>{{ check.last_update }}</dd>
   {% if check.checkparameter_set.count %}
