--- a/monitoring/templates/monitoring/graph.html
+++ b/monitoring/templates/monitoring/graph.html
@@ -4,6 +4,10 @@
 {% block content %}
 <ol class="breadcrumb">
   <li><a href="/">Home</a></li>
+  <li>
+    <a href="{% url hosts.views.host check.target_host.fqdn %}">{{ check.target_host|display:"fqdn" }}</a>
+    {% if check.target_host != check.exec_host %}(as seen by <a href="{% url hosts.views.host check.exec_host.fqdn %}">{{ check.exec_host|display:"fqdn" }}</a>){% endif %}
+  </li>
   <li><a href="{% url monitoring.views.check_details check.uuid %}">{{ check|display:"uuid" }}</a></li>
   <li class="active">{{ variable|display }}</li>
 </ol>
@@ -13,9 +17,9 @@
   <dt>Sensor:</dt>
   <dd>{{ check.sensor }}</dd>
   <dt>Executed on host:</dt>
-  <dd>{{ check.exec_host }}</dd>
+  <dd><a href="{% url hosts.views.host check.exec_host.fqdn %}">{{ check.exec_host|display:"fqdn" }}</a></dd>
   <dt>Target host:</dt>
-  <dd>{{ check.target_host }}</dd>
+  <dd><a href="{% url hosts.views.host check.target_host.fqdn %}">{{ check.target_host|display:"fqdn" }}</a></dd>
   <dt>Last update:</dt>
   <dd>{{ check.last_update }}</dd>
   {% if check.checkparameter_set.count %}
