--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,7 @@
     </div>
 
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/static/display/display.js"></script>
   </body>
 </html>
 {% comment %} kate: space-indent on; indent-width 2; replace-tabs on; {% endcomment %}
