--- a/monitoring/templates/monitoring/graph.html
+++ b/monitoring/templates/monitoring/graph.html
@@ -11,33 +11,11 @@
   <li><a href="{% url monitoring.views.check_details check.uuid %}">{{ check|display:"uuid" }}</a></li>
   <li class="active">{{ variable|display }}</li>
 </ol>
-<dl class="dl-horizontal">
-  <dt>Check:</dt>
-  <dd>{{ check|displayform:"uuid" }}</dd>
-  <dt>Sensor:</dt>
-  <dd>{{ check.sensor }}</dd>
-  <dt>Executed on host:</dt>
-  <dd><a href="{% url hosts.views.host check.exec_host.fqdn %}">{{ check.exec_host|display:"fqdn" }}</a></dd>
-  <dt>Target host:</dt>
-  <dd><a href="{% url hosts.views.host check.target_host.fqdn %}">{{ check.target_host|display:"fqdn" }}</a></dd>
-  <dt>Last update:</dt>
-  <dd>{{ check.last_update }}</dd>
-  {% if check.checkparameter_set.count %}
-    <dt>Parameters:</dt>
-    <dd>
-      <ul class="list-unstyled">
-        {% for checkparam in check.checkparameter_set.all %}
-          <li><i>{{ checkparam.parameter|display }}:</i> {{ checkparam.value }}</li>
-        {% endfor %}
-      </ul>
-    </dd>
-  {% endif %}
-</dl>
+{% include "monitoring/checkinfo.inc.html" %}
 <h3>{{ variable|display }}</h3>
 <div style="width: 100%">
   <img class="widescreenonly"   src="{% url monitoring.views.render_check check.uuid variable.name %}" alt="graph" style="margin: 0 auto" />
   <img class="narrowscreenonly" src="{% url monitoring.views.render_check check.uuid variable.name %}?width=410" alt="graph" style="margin: 0 auto" />
   <img class="tinyscreenonly"   src="{% url monitoring.views.render_check check.uuid variable.name %}?width=220" alt="graph" style="margin: 0 auto" />
 </div>
-<script type="text/javascript" src="/static/display/display.js"></script>
 {% endblock %}
