display outdated checks in the profile, hide test stuff and search bar, shorten mode lines

--- a/monitoring/templates/monitoring/checkdetails.html
+++ b/monitoring/templates/monitoring/checkdetails.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load display_extras %}
-{% comment %} kate: space-indent on; indent-width 2; replace-tabs on; {% endcomment %}
+{# kate: space-indent on; indent-width 2; replace-tabs on; #}
 {% block content %}
 <ol class="breadcrumb">
   <li><a href="/">Home</a></li>
