--- a/monitoring/templates/monitoring/checkinfo.inc.html
+++ b/monitoring/templates/monitoring/checkinfo.inc.html
@@ -1,4 +1,4 @@
-{% comment %} kate: space-indent on; indent-width 2; replace-tabs on; {% endcomment %}
+{# kate: space-indent on; indent-width 2; replace-tabs on; #}
 {% load display_extras %}
 <dl class="dl-horizontal">
   <dt>Check:</dt>
