--- a/monitoring/templates/monitoring/search.html
+++ b/monitoring/templates/monitoring/search.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% comment %} kate: space-indent on; indent-width 2; replace-tabs on; {% endcomment %}
+{# kate: space-indent on; indent-width 2; replace-tabs on; #}
 {% block content %}
   {% include "monitoring/searchform.inc.html" %}
   {% if have_query %}
