--- a/monitoring/templates/monitoring/searchform.inc.html
+++ b/monitoring/templates/monitoring/searchform.inc.html
@@ -1,4 +1,4 @@
-{% comment %} kate: space-indent on; indent-width 2; replace-tabs on; {% endcomment %}
+{# kate: space-indent on; indent-width 2; replace-tabs on; #}
   <h2>Search</h2>
 
   <div>
