--- a/monitoring/templates/monitoring/checkdetails.html
+++ b/monitoring/templates/monitoring/checkdetails.html
@@ -19,9 +19,12 @@
     </tr>
   </thead>
   <tbody>
-  {% for variable in check.sensor.sensorvariable_set.all %}
+  {% for variable, alerts in vars %}
     <tr onclick="window.location='{% url monitoring.views.render_check_page check.uuid variable.name %}';">
-      <td>{{ variable|display }}</td>
+      <td>
+        {{ variable|display }}
+        {% if alerts %}<span class="glyphicon glyphicon-warning-sign" title="Variable is in warning state"></span>{% endif %}
+      </td>
       <td><a href="{% url monitoring.views.render_check_page check.uuid variable.name %}" title="View graph" style="text-decoration: none">→</a></td>
     </tr>
   {% endfor %}
