--- a/monitoring/templates/monitoring/listchecks.inc.html
+++ b/monitoring/templates/monitoring/listchecks.inc.html
@@ -13,7 +13,7 @@
   </thead>
   <tbody>
   {% for check in list_checks %}
-    <tr onclick="window.location='{% url monitoring.views.check_details check.uuid %}';">
+    <tr onclick="window.location='{% url monitoring.views.check_details check.uuid %}';" class="{% if check.current_alert %}warning{% else %}success{% endif %}">
       <td>
         {{ check.target_host }}
         {% if check.target_host != check.exec_host %}(as seen by {{ check.exec_host }}){% endif %}
