add hl statement to kate modelines

--- a/monitoring/templates/monitoring/listchecks.inc.html
+++ b/monitoring/templates/monitoring/listchecks.inc.html
@@ -1,4 +1,4 @@
-{# kate: space-indent on; indent-width 2; replace-tabs on; #}
+{# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
 {% load display_extras %}
 {% if list_checks %}
 <table class="table table-hover">
