--- a/display/templates/display/displayform.html
+++ b/display/templates/display/displayform.html
@@ -1,4 +1,4 @@
-{% comment %} kate: space-indent on; indent-width 2; replace-tabs on; {% endcomment %}
+{# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
 <div class="fluxeditable">
   <div class="fluxlabel">
     <span>{{ display }}</span>
