--- a/monitoring/templates/monitoring/checkdetails.html
+++ b/monitoring/templates/monitoring/checkdetails.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load display_extras %}
-{# kate: space-indent on; indent-width 2; replace-tabs on; #}
+{# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
 {% block content %}
 <ol class="breadcrumb">
   <li><a href="/">Home</a></li>
