--- a/monitoring/templates/monitoring/search.html
+++ b/monitoring/templates/monitoring/search.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{# kate: space-indent on; indent-width 2; replace-tabs on; #}
+{# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
 {% block content %}
   {% include "monitoring/searchform.inc.html" %}
   {% if have_query %}
