--- a/monitoring/templates/monitoring/searchform.inc.html
+++ b/monitoring/templates/monitoring/searchform.inc.html
@@ -1,4 +1,4 @@
-{# kate: space-indent on; indent-width 2; replace-tabs on; #}
+{# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
   <h2>Search</h2>
 
   <div>
