--- a/templates/base.html
+++ b/templates/base.html
@@ -54,5 +54,4 @@
     <script type="text/javascript" src="/static/display/display.js"></script>
   </body>
 </html>
-{% comment %} kate: space-indent on; indent-width 2; replace-tabs on; {% endcomment %}
-
+{# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
