--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% comment %} kate: space-indent on; indent-width 2; replace-tabs on; {% endcomment %}
+{# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
 {% block content %}
   <h1>Fluxmon</h1>
 
