--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -33,6 +33,7 @@
             placeholder="{{ form.password.label }}" />
         </div>
       </div>
+      <input type="hidden" name="next" value="{{ next }}" />
       <div class="form-group">
         <div class="col-lg-offset-2 col-lg-10">
           <button type="submit" class="btn btn-default">Login</button>
